chore: update to micronaut 4.8.2 and kotlin 1.9.25, add toolchain support and strip unnecessary stuff